test/cherry/Language/const_assign_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  const answer: UInt64 = 42;
  answer = 43;

  answer
}

# CHECK: error: cannot assign to const variable
